# minimum-viable-blockchain

./: Cargo.toml  README.md
src/: hash.rs  lib.rs  main.rs  peers.rs  wallet.rs
src/chain/: address.rs  balance.rs  block.rs  blockchain.rs  header.rs  mod.rs  transaction.rs
src/consensus/: config.rs  gossip.rs  message.rs  miner.rs  mod.rs  node.rs  peers.rs
