[package]
name = "blockchain"
version = "0.1.0"
authors = ["Robert L Kelly <robert.l.kelly3@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.0"
chrono = "0.4"
futures = "0.1"
rand = "0.6.4"
rmp-serde = "0.13.7"
rust-crypto = "^0.2"
serde = "1.0.85"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
